@@ -1,3 +1,9 @@
+2022-02-28 Gabriele Gorla <gorlik@yahoo.com>
+
+	* sdcc/src/mos6502/gen.c,
+	  sdcc/src/mos6502/gen.h:
+	  Change asmop.type to enum.
+
 2022-03-03 Sebastian 'basxto' Riedel <sdcc@basxto.de>
 
 	* device/lib/sm83/memcpy.s:
